Improved the example.